<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/applicationEnvironmentTitle"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:text="@string/ServiceStatusTitle" />

            <TextView
                android:id="@+id/txtServiceStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DefaultServiceStatus" />
        </LinearLayout>

        <Button
            android:id="@+id/btnStartService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/startService" />

        <Button
            android:id="@+id/btnStopService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stopService" />

        <Button
            android:id="@+id/btnStartServiceWithoutAdaptation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startServiceWithoutAdaptation" />

        <Button
            android:id="@+id/btnStartEventsExperiment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startEventsExperiment" />

        <Button
            android:id="@+id/btnDeleteDatabase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteDB" />

        <Button
            android:id="@+id/btnDeleteExperimentalFiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deleteExperimentalFiles" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/back" />
    </LinearLayout>

</ScrollView>